--- a/Vidly.csproj
+++ b/Vidly.csproj
@@ -245,6 +245,7 @@
     <Content Include="Views\Movie\Random.cshtml" />
     <Content Include="Views\Customer\Index.cshtml" />
     <Content Include="Views\Customer\ViewCustomer.cshtml" />
+    <Content Include="Views\Movie\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
