--- a/Vidly.csproj
+++ b/Vidly.csproj
@@ -175,10 +175,28 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201909171701110_AddingInitialMigration.cs" />
+    <Compile Include="Migrations\201909171701110_AddingInitialMigration.Designer.cs">
+      <DependentUpon>201909171701110_AddingInitialMigration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201909171703140_AddingCustomerAndMovieTables.cs" />
+    <Compile Include="Migrations\201909171703140_AddingCustomerAndMovieTables.Designer.cs">
+      <DependentUpon>201909171703140_AddingCustomerAndMovieTables.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201909171708575_AddIsSubscribedToCustomer.cs" />
+    <Compile Include="Migrations\201909171708575_AddIsSubscribedToCustomer.Designer.cs">
+      <DependentUpon>201909171708575_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201909171713101_AddMembershipType.cs" />
+    <Compile Include="Migrations\201909171713101_AddMembershipType.Designer.cs">
+      <DependentUpon>201909171713101_AddMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -262,6 +280,20 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201909171701110_AddingInitialMigration.resx">
+      <DependentUpon>201909171701110_AddingInitialMigration.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909171703140_AddingCustomerAndMovieTables.resx">
+      <DependentUpon>201909171703140_AddingCustomerAndMovieTables.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909171708575_AddIsSubscribedToCustomer.resx">
+      <DependentUpon>201909171708575_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909171713101_AddMembershipType.resx">
+      <DependentUpon>201909171713101_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
