Adding Membership type seeding.

--- a/Vidly.csproj
+++ b/Vidly.csproj
@@ -191,6 +191,10 @@
     <Compile Include="Migrations\201909171713101_AddMembershipType.Designer.cs">
       <DependentUpon>201909171713101_AddMembershipType.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201909171718289_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\201909171718289_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>201909171718289_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -293,6 +297,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201909171713101_AddMembershipType.resx">
       <DependentUpon>201909171713101_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909171718289_PopulateMembershipTypes.resx">
+      <DependentUpon>201909171718289_PopulateMembershipTypes.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
