--- a/Vidly.csproj
+++ b/Vidly.csproj
@@ -199,6 +199,10 @@
     <Compile Include="Migrations\201909171726383_ApplyingAnnotationsToCustomerName.Designer.cs">
       <DependentUpon>201909171726383_ApplyingAnnotationsToCustomerName.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201909181823465_UpdateMembershipTypeAddingName.cs" />
+    <Compile Include="Migrations\201909181823465_UpdateMembershipTypeAddingName.Designer.cs">
+      <DependentUpon>201909181823465_UpdateMembershipTypeAddingName.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -307,6 +311,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201909171726383_ApplyingAnnotationsToCustomerName.resx">
       <DependentUpon>201909171726383_ApplyingAnnotationsToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909181823465_UpdateMembershipTypeAddingName.resx">
+      <DependentUpon>201909181823465_UpdateMembershipTypeAddingName.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
