--- a/Vidly.csproj
+++ b/Vidly.csproj
@@ -203,6 +203,10 @@
     <Compile Include="Migrations\201909181823465_UpdateMembershipTypeAddingName.Designer.cs">
       <DependentUpon>201909181823465_UpdateMembershipTypeAddingName.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201909181831094_AddingBirthDateToCustomerTable.cs" />
+    <Compile Include="Migrations\201909181831094_AddingBirthDateToCustomerTable.Designer.cs">
+      <DependentUpon>201909181831094_AddingBirthDateToCustomerTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -314,6 +318,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201909181823465_UpdateMembershipTypeAddingName.resx">
       <DependentUpon>201909181823465_UpdateMembershipTypeAddingName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909181831094_AddingBirthDateToCustomerTable.resx">
+      <DependentUpon>201909181831094_AddingBirthDateToCustomerTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
