Adding new columns to movie table

--- a/Vidly.csproj
+++ b/Vidly.csproj
@@ -207,9 +207,14 @@
     <Compile Include="Migrations\201909181831094_AddingBirthDateToCustomerTable.Designer.cs">
       <DependentUpon>201909181831094_AddingBirthDateToCustomerTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201909181847185_AddNewColumnsToMovieTable.cs" />
+    <Compile Include="Migrations\201909181847185_AddNewColumnsToMovieTable.Designer.cs">
+      <DependentUpon>201909181847185_AddNewColumnsToMovieTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
@@ -321,6 +326,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201909181831094_AddingBirthDateToCustomerTable.resx">
       <DependentUpon>201909181831094_AddingBirthDateToCustomerTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909181847185_AddNewColumnsToMovieTable.resx">
+      <DependentUpon>201909181847185_AddNewColumnsToMovieTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
