Adding basic add action

--- a/Vidly.csproj
+++ b/Vidly.csproj
@@ -286,6 +286,7 @@
     <Content Include="Views\Customer\ViewCustomer.cshtml" />
     <Content Include="Views\Movie\Index.cshtml" />
     <Content Include="Views\Movie\Details.cshtml" />
+    <Content Include="Views\Customer\Add.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
