--- a/Vidly.csproj
+++ b/Vidly.csproj
@@ -211,6 +211,10 @@
     <Compile Include="Migrations\201909181847185_AddNewColumnsToMovieTable.Designer.cs">
       <DependentUpon>201909181847185_AddNewColumnsToMovieTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201909241656185_AddingGenreTable.cs" />
+    <Compile Include="Migrations\201909241656185_AddingGenreTable.Designer.cs">
+      <DependentUpon>201909241656185_AddingGenreTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -333,6 +337,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201909181847185_AddNewColumnsToMovieTable.resx">
       <DependentUpon>201909181847185_AddNewColumnsToMovieTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909241656185_AddingGenreTable.resx">
+      <DependentUpon>201909241656185_AddingGenreTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
